container class added and align items fixed to align column

--- a/less/grid.less
+++ b/less/grid.less
@@ -1,5 +1,26 @@
 @import "mix.less";
 
+.container {
+    margin-left: 1%;
+    margin-right: 1%;
+    @media screen and @minSm {
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+    @media screen and @minMd {
+        margin-left: 4%;
+        margin-right: 4%;
+    }
+    @media screen and @minLg {
+        margin-left: 6%;
+        margin-right: 6%;
+    }
+    @media screen and @minXlg {
+        margin-left: 8%;
+        margin-right: 8%;
+    }
+}
+
 .row-flex {
     .disp(flex);
     flex-wrap: wrap;
@@ -124,13 +145,13 @@
     .align-c(space-between);
 }
 .align-start {
-    .align-c(start);
+    .align-c(flex-start);
 }
 .align-center {
     .align-c(center);
 }
 .align-end {
-    .align-c(end);
+    .align-c(flex-end);
 }
 
 ._around {
@@ -155,25 +176,25 @@
 }
 
 ._around-flex {
-    .disp(flex);
-    ._around()
+    .row-flex();
+    ._around();
 }
 ._evenly-flex {
-    .disp(flex);
+    .row-flex();
     ._evenly()
 }
 ._between-flex {
-    .disp(flex);
-    ._between()
+    .row-flex();
+    ._between();
 }
 ._center-flex {
-    .disp(flex);
+    .row-flex();
     ._center();
     .align(center);
 }
 ._end-flex {
-    .disp(flex);
-    ._end
+    .row-flex();
+    ._end();
 }
 
 ._around-grid {
